MAINTAINERCLEANFILES = Makefile.in

man_MANS = \
           ggInit.3 \
           ggExit.3 \
           ggCurTime.3 \
           ggUSleep.3 \
           ggUSlumber.3 \
           ggGetUserDir.3 \
           ggLockCreate.3 \
           ggLockDestroy.3 \
           ggLock.3 \
           ggUnlock.3 \
           ggTryLock.3 \
           ggRegisterCleanup.3 \
           ggUnregisterCleanup.3 \
           ggCleanupForceExit.3 \
           ggGetScope.3 \
           ggFromScope.3 \
           ggDelScope.3 \
           ggNewScope.3 \
           ggParseOptions.3 \
           ggLoadConfig.3 \
           ggFreeConfig.3 \
           ggConfigIterTarget.3 \
           ggConfigIterLocation.3 \
           ggAddTask.3 \
           ggDelTask.3 \
           ggTimeBase.3 \
           GG_SCHED_TICKS2USECS.3 \
           GG_SCHED_USECS2TICKS.3 \
           ggGetSwarType.3 \
           ggAddObserver.3 \
           ggDelObserver.3 \
           ggNotifyObservers.3 \
           ggClearPublisher.3 \
           ggstrlcpy.3 \
           ggstrlcat.3 \
           gg-queue.3 \
           GG_SLIST_HEAD.3 \
           GG_SLIST_HEAD_INITIALIZER.3 \
           GG_SLIST_ENTRY.3 \
           GG_SLIST_INIT2.3 \
           GG_SLIST_INSERT_AFTER.3 \
           GG_SLIST_INSERT_HEAD.3 \
           GG_SLIST_REMOVE_HEAD.3 \
           GG_SLIST_REMOVE.3 \
           GG_SLIST_FOREACH.3 \
           GG_SLIST_EMPTY.3 \
           GG_SLIST_FIRST.3 \
           GG_SLIST_NEXT.3 \
           GG_SIMPLEQ_HEAD.3 \
           GG_SIMPLEQ_HEAD_INITIALIZER.3 \
           GG_SIMPLEQ_ENTRY.3 \
           GG_SIMPLEQ_INIT.3 \
           GG_SIMPLEQ_INSERT_HEAD.3 \
           GG_SIMPLEQ_INSERT_TAIL.3 \
           GG_SIMPLEQ_INSERT_AFTER.3 \
           GG_SIMPLEQ_REMOVE_HEAD.3 \
           GG_SIMPLEQ_REMOVE.3 \
           GG_SIMPLEQ_FOREACH.3 \
           GG_SIMPLEQ_EMPTY.3 \
           GG_SIMPLEQ_FIRST.3 \
           GG_SIMPLEQ_NEXT.3 \
           GG_LIST_HEAD.3 \
           GG_LIST_HEAD_INITIALIZER.3 \
           GG_LIST_ENTRY.3 \
           GG_LIST_INIT.3 \
           GG_LIST_INSERT_AFTER.3 \
           GG_LIST_INSERT_BEFORE.3 \
           GG_LIST_INSERT_HEAD.3 \
           GG_LIST_REMOVE.3 \
           GG_LIST_FOREACH.3 \
           GG_LIST_EMPTY.3 \
           GG_LIST_FIRST.3 \
           GG_LIST_NEXT.3 \
           GG_TAILQ_HEAD.3 \
           GG_TAILQ_HEAD_INITIALIZER.3 \
           GG_TAILQ_ENTRY.3 \
           GG_TAILQ_INIT.3 \
           GG_TAILQ_INSERT_HEAD.3 \
           GG_TAILQ_INSERT_TAIL.3 \
           GG_TAILQ_INSERT_AFTER.3 \
           GG_TAILQ_INSERT_BEFORE.3 \
           GG_TAILQ_REMOVE.3 \
           GG_TAILQ_FOREACH.3 \
           GG_TAILQ_FOREACH_REVERSE.3 \
           GG_TAILQ_EMPTY.3 \
           GG_TAILQ_FIRST.3 \
           GG_TAILQ_NEXT.3 \
           GG_TAILQ_LAST.3 \
           GG_TAILQ_PREV.3 \
           GG_CIRCLEQ_HEAD.3 \
           GG_CIRCLEQ_HEAD_INITIALIZER.3 \
           GG_CIRCLEQ_ENTRY.3 \
           GG_CIRCLEQ_INIT.3 \
           GG_CIRCLEQ_INSERT_AFTER.3 \
           GG_CIRCLEQ_INSERT_BEFORE.3 \
           GG_CIRCLEQ_INSERT_HEAD.3 \
           GG_CIRCLEQ_INSERT_TAIL.3 \
           GG_CIRCLEQ_REMOVE.3 \
           GG_CIRCLEQ_FOREACH.3 \
           GG_CIRCLEQ_FOREACH_REVERSE.3 \
           GG_CIRCLEQ_EMPTY.3 \
           GG_CIRCLEQ_FIRST.3 \
           GG_CIRCLEQ_LAST.3 \
           GG_CIRCLEQ_NEXT.3 \
           GG_CIRCLEQ_PREV.3 \
           gg-tree.3 \
           GG_SPLAY_PROTOTYPE.3 \
           GG_SPLAY_GENERATE.3 \
           GG_SPLAY_ENTRY.3 \
           GG_SPLAY_HEAD.3 \
           GG_SPLAY_INITIALIZER.3 \
           GG_SPLAY_ROOT.3 \
           GG_SPLAY_EMPTY.3 \
           GG_SPLAY_NEXT.3 \
           GG_SPLAY_MIN.3 \
           GG_SPLAY_MAX.3 \
           GG_SPLAY_FIND.3 \
           GG_SPLAY_LEFT.3 \
           GG_SPLAY_RIGHT.3 \
           GG_SPLAY_FOREACH.3 \
           GG_SPLAY_INIT.3 \
           GG_SPLAY_INSERT.3 \
           GG_SPLAY_REMOVE.3 \
           GG_RB_PROTOTYPE.3 \
           GG_RB_GENERATE.3 \
           GG_RB_ENTRY.3 \
           GG_RB_HEAD.3 \
           GG_RB_INITIALIZER.3 \
           GG_RB_ROOT.3 \
           GG_RB_EMPTY.3 \
           GG_RB_NEXT.3 \
           GG_RB_MIN.3 \
           GG_RB_MAX.3 \
           GG_RB_FIND.3 \
           GG_RB_LEFT.3 \
           GG_RB_RIGHT.3 \
           GG_RB_PARENT.3 \
           GG_RB_FOREACH.3 \
           GG_RB_INIT.3 \
           GG_RB_INSERT.3 \
           GG_RB_REMOVE.3 \
           gg-types.3 \
           gg-error.3 \
           gii-error.3 \
           ggi-error.3 \
           libgg.7 \
           giiInit.3 \
           giiExit.3 \
           giiMTInit.3 \
           giiPanic.3 \
           giiOpen.3 \
           giiJoinInputs.3 \
           giiSplitInputs.3 \
           giiClose.3 \
           giiSetEventMask.3 \
           giiGetEventMask.3 \
           giiAddEventMask.3 \
           giiRemoveEventMask.3 \
           giiEventPoll.3 \
           giiEventSelect.3 \
           giiEventsQueued.3 \
           giiEventRead.3 \
           giiEventSend.3 \
           giiQueryDeviceInfo.3 \
           giiQueryDeviceInfoByNumber.3 \
           giiQueryValInfo.3 \
           gii_event.3 \
           gii_any_event.3 \
           gii_event_type.3 \
           gii_event_mask.3 \
           gii_key_event.3 \
           gii_pmove_event.3 \
           gii_pbutton_event.3 \
           gii_cmd_event.3 \
           gii_cmd_nodata_event.3 \
           gii_val_event.3 \
           gii_expose_event.3 \
           gii_cmddata_getdevinfo.3 \
           gii_cmddata_getvalinfo.3 \
           gii_phystype.3 \
           gii_valrange.3 \
           libgii.7 \
           filter-key.7 \
           filter-keytrans.7 \
           filter-mouse.7 \
           filter-save.7 \
           filter-tcp.7 \
           input-directx.7 \
           input-file.7 \
           input-linux-evdev.7 \
           input-linux-kbd.7 \
           input-linux-mouse.7 \
           input-lk201.7 \
           input-mouse.7 \
           input-quartz.7 \
           input-tcp.7 \
           input-x.7 \
           mhub.1 \
           xsendbut.1 \
           libgii.conf.5

EXTRA_DIST = $(man_MANS)
