AM_CPPFLAGS = -DDEBUG_NAMESPACE='"libgii.input.lk201"'
INCLUDES  = -I${top_srcdir}/include -I${top_builddir}/include ${extra_includes}

noinst_LTLIBRARIES = liblk201.la

liblk201_la_SOURCES = input.c

EXTRA_DIST = EXPSYMS keytable.dat keysymShift.dat man.txt

DISTCLEANFILES = Makefile .deps
MAINTAINERCLEANFILES = Makefile.in

